# scdb

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore
data/raw/2020_01/: .gitignore
data/raw/Legacy_06/: .gitignore
data_pipeline/: acquire.py  featherize.py  parquet_like_its_hot.py  preprocess.py  wrangle.py
tests/: test_acquire.py
